--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -49,7 +49,13 @@
       "wrongPassword": "Email or password is incorrect",
       "loginError": "An error occurred while signing in",
       "sessionExpired": "Your session has expired. Please sign in again.",
-      "copyright": "© 2025 VERII. All rights reserved."
+      "copyright": "© 2025 VERII. All rights reserved.",
+      "branchPlaceholder": "Select Branch",
+      "rememberMe": "Remember me",
+      "forgotPassword": "Forgot password?",
+      "processing": "Processing...",
+      "submitButton": "Sign In",
+      "slogan": "Empowering your business with <1>VERII CRM</1>"
     },
     "logout": "Logout"
   },
@@ -102,7 +108,14 @@
     "documentSerialTypeManagement": "Document Serial Type Management",
     "stockManagement": "Stock Management",
     "settings": "Settings",
-    "logout": "Log Out"
+    "logout": "Log Out",
+    "productAndStock": "Products & Stock",
+    "salesManagement": "Sales Management",
+    "proposals": "Proposals",
+    "quotationList": "Quotation List",
+    "waitingApprovals": "Pending Approvals",
+    "definitions": "Definitions",
+    "users": "Users"
   },
   "dashboard": {
     "title": "Dashboard",
