--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -49,7 +49,13 @@
       "wrongPassword": "El correo o la contraseña son incorrectos",
       "loginError": "Ocurrió un error al iniciar sesión",
       "sessionExpired": "Su sesión ha caducado. Por favor, inicie sesión nuevamente.",
-      "copyright": "© 2025 VERII. Todos los derechos reservados."
+      "copyright": "© 2025 VERII. Todos los derechos reservados.",
+      "branchPlaceholder": "Seleccionar Sucursal",
+      "rememberMe": "Recuérdame",
+      "forgotPassword": "¿Olvidaste tu contraseña?",
+      "processing": "Procesando...",
+      "submitButton": "Iniciar Sesión",
+      "slogan": "Potenciando tu negocio con <1>VERII CRM</1>"
     },
     "logout": "Cerrar Sesión"
   },
@@ -102,7 +108,14 @@
     "documentSerialTypeManagement": "Gestión de Tipos de Serie de Documentos",
     "stockManagement": "Gestión de Inventario",
     "settings": "Configuración",
-    "logout": "Cerrar Sesión"
+    "logout": "Cerrar Sesión",
+    "productAndStock": "Productos y Stock",
+    "salesManagement": "Gestión de Ventas",
+    "proposals": "Propuestas",
+    "quotationList": "Lista de Presupuestos",
+    "waitingApprovals": "Aprobaciones Pendientes",
+    "definitions": "Definiciones",
+    "users": "Usuarios"
   },
   "dashboard": {
     "title": "Tablero",
