--- a/src/locales/it/common.json
+++ b/src/locales/it/common.json
@@ -49,7 +49,13 @@
       "wrongPassword": "Email o password non corretti",
       "loginError": "Si è verificato un errore durante l'accesso",
       "sessionExpired": "La sessione è scaduta. Effettua nuovamente l'accesso.",
-      "copyright": "© 2025 VERII. Tutti i diritti riservati."
+      "copyright": "© 2025 VERII. Tutti i diritti riservati.",
+      "branchPlaceholder": "Seleziona Filiale",
+      "rememberMe": "Ricordami",
+      "forgotPassword": "Password dimenticata?",
+      "processing": "Elaborazione...",
+      "submitButton": "Accedi",
+      "slogan": "Potenzia la tua attività con <1>VERII CRM</1>"
     },
     "logout": "Disconnetti"
   },
@@ -102,7 +108,14 @@
     "documentSerialTypeManagement": "Gestione Tipi Serie Documenti",
     "stockManagement": "Gestione Magazzino",
     "settings": "Impostazioni",
-    "logout": "Esci"
+    "logout": "Esci",
+    "productAndStock": "Prodotti e Magazzino",
+    "salesManagement": "Gestione Vendite",
+    "proposals": "Proposte",
+    "quotationList": "Lista Preventivi",
+    "waitingApprovals": "In Attesa di Approvazione",
+    "definitions": "Definizioni",
+    "users": "Utenti"
   },
   "dashboard": {
     "title": "Dashboard",
