feat: register demand and order routes, sidebar items and common translations

--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -64,6 +64,10 @@
     "customers": "Müşteriler",
     "opportunities": "Fırsatlar",
     "offers": "Teklifler",
+    "demands": "Talepler",
+    "demandList": "Talep Listesi",
+    "demandCreateWizard": "Yeni Talep Oluştur",
+    "waitingDemandApprovals": "Onay Bekleyen Talepler",
     "activities": "Aktiviteler",
     "dailyTasks": "Günlük İşler",
     "erpCustomerManagement": "ERP Müşteri",
@@ -75,6 +79,9 @@
     "approvalFlowManagement": "Onay Akışı Yönetimi",
     "routes": "Rotalar",
     "orders": "Siparişler",
+    "orderList": "Sipariş Listesi",
+    "orderCreateWizard": "Yeni Sipariş Oluştur",
+    "waitingOrderApprovals": "Onay Bekleyen Siparişler",
     "campaigns": "Kampanyalar",
     "reports": "Raporlar",
     "powerbi": "PowerBI",
