--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -70,6 +70,10 @@
     "customers": "Customers",
     "opportunities": "Opportunities",
     "offers": "Offers",
+    "demands": "Demands",
+    "demandList": "Demand List",
+    "demandCreateWizard": "Create New Demand",
+    "waitingDemandApprovals": "Pending Demand Approvals",
     "activities": "Activities",
     "dailyTasks": "Daily Tasks",
     "erpCustomerManagement": "ERP Customer",
@@ -81,6 +85,9 @@
     "approvalFlowManagement": "Approval Flow Management",
     "routes": "Routes",
     "orders": "Orders",
+    "orderList": "Order List",
+    "orderCreateWizard": "Create New Order",
+    "waitingOrderApprovals": "Pending Order Approvals",
     "campaigns": "Campaigns",
     "reports": "Reports",
     "powerbi": "PowerBI",
