feat(erp-customer): finalize module with full i18n, strict typing and advanced filters
- Integrated full localization (i18n) for filters, placeholders, and action buttons.
- Fixed hardcoded "Edit Columns" and "Visible Columns" text in ErpCustomerTable to use dynamic translation keys.
- Added missing keys (editColumns, visibleColumns, filterLabels) to all locale JSON files (TR, EN, etc.).
- Enforced strict `CariDto` type usage in sort functions and useMemo for type safety.
- Refactored filter inputs with HugeIcons and improved UI styling.

--- a/src/locales/ar/erp-customer-management.json
+++ b/src/locales/ar/erp-customer-management.json
@@ -17,6 +17,33 @@
     "website": "الموقع الإلكتروني",
     "taxNumber": "الرقم الضريبي",
     "taxOffice": "مكتب الضرائب",
-    "tcknNumber": "رقم TCKN"
+    "tcknNumber": "رقم TCKN",
+    "visibleColumns": "الأعمدة المرئية",
+    "editColumns": "تعديل الأعمدة"
+  },
+  "filterLabels": {
+    "branchCode": "رمز الفرع",
+    "customerCode": "رمز العميل",
+    "customerName": "اسم العميل",
+    "city": "المدينة",
+    "district": "المنطقة",
+    "taxNumber": "الرقم الضريبي"
+  },
+  "placeholders": {
+    "quickSearch": "بحث سريع...",
+    "all": "الكل",
+    "codeExample": "مثال: 120...",
+    "nameExample": "اسم العميل...",
+    "cityExample": "المدينة...",
+    "districtExample": "المنطقة...",
+    "taxExample": "ضريبة/TCKN..."
+  },
+  "actions": {
+    "detailedFilter": "تصفية مفصلة",
+    "clear": "مسح",
+    "filter": "تصفية",
+    "all": "الكل",
+    "active": "نشط",
+    "passive": "غير نشط"
   }
 }
