--- a/src/locales/es/erp-customer-management.json
+++ b/src/locales/es/erp-customer-management.json
@@ -1,22 +1,49 @@
 {
-  "menu": "Clientes ERP",
-  "description": "Lista de clientes del sistema ERP",
-  "loading": "Cargando...",
-  "noData": "No se encontraron clientes",
+  "menu": "Clienti ERP",
+  "description": "Elenco clienti dal sistema ERP",
+  "loading": "Caricamento...",
+  "noData": "Nessun cliente trovato",
   "table": {
-    "branchCode": "Código de Sucursal",
-    "businessUnitCode": "Código de Unidad de Negocio",
-    "customerCode": "Código de Cliente",
-    "customerName": "Nombre del Cliente",
-    "phone": "Teléfono",
-    "city": "Ciudad",
-    "district": "Distrito",
-    "address": "Dirección",
-    "countryCode": "Código de País",
-    "email": "Correo Electrónico",
-    "website": "Sitio Web",
-    "taxNumber": "Número de Identificación Fiscal",
-    "taxOffice": "Oficina de Impuestos",
-    "tcknNumber": "Número TCKN"
+    "branchCode": "Codice Filiale",
+    "businessUnitCode": "Codice Unità Aziendale",
+    "customerCode": "Codice Cliente",
+    "customerName": "Nome Cliente",
+    "phone": "Telefono",
+    "city": "Città",
+    "district": "Distretto",
+    "address": "Indirizzo",
+    "countryCode": "Codice Paese",
+    "email": "E-mail",
+    "website": "Sito Web",
+    "taxNumber": "Partita IVA",
+    "taxOffice": "Ufficio delle Entrate",
+    "tcknNumber": "Numero TCKN",
+    "visibleColumns": "Colonne Visibili",
+    "editColumns": "Modifica Colonne"
+  },
+  "filterLabels": {
+    "branchCode": "Codice Filiale",
+    "customerCode": "Codice Cliente",
+    "customerName": "Nome Cliente",
+    "city": "Città",
+    "district": "Distretto",
+    "taxNumber": "Partita IVA"
+  },
+  "placeholders": {
+    "quickSearch": "Ricerca Rapida...",
+    "all": "Tutti",
+    "codeExample": "Es: 120...",
+    "nameExample": "Nome cliente...",
+    "cityExample": "Città...",
+    "districtExample": "Distretto...",
+    "taxExample": "P.IVA/TCKN..."
+  },
+  "actions": {
+    "detailedFilter": "Filtro Avanzato",
+    "clear": "Pulisci",
+    "filter": "Filtra",
+    "all": "TUTTI",
+    "active": "ATTIVO",
+    "passive": "PASSIVO"
   }
 }
