feat(i18n): add new translations

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -83,6 +83,8 @@
     "orders": "Orders",
     "campaigns": "Campaigns",
     "reports": "Reports",
+    "reportBuilder": "Report Builder",
+    "pdfBuilder": "PDF Builder",
     "powerbi": "PowerBI",
     "titleManagement": "Title Management",
     "shippingAddressManagement": "Shipping Address Management",
